--- a/home.html
+++ b/home.html
@@ -184,11 +184,33 @@ h1.app-title {
     <a href="#settings"><i class="fa-solid fa-gear"></i> הגדרות</a>
     <a id="notifToggle" class="notifToggle"><i class="fa-solid fa-bell notifIcon"></i> התראות</a>
     <a href="/profile"><i class="fa-solid fa-user"></i> פרופיל</a>
+  </a>
   </nav>
-    <a class="burger" id="burger">&#9776;</a>
-  
 </header>
 
+<nav class="bottom-nav">
+  <a href="/profile" class="nav-item">
+    <i class="fa-solid fa-user"></i>
+    <span>פרופיל</span>
+  </a>
+    <a id="notifToggle" class="notifToggle nav-item">
+      <i class="fa-solid fa-bell notifIcon"></i>
+    <span>התראות</span>
+    </a>
+
+  <a href="/" class="nav-item home-btn">
+    <i class="fa-solid fa-house"></i>
+    <span>בית</span>
+  </a>
+  <a href="/admin#shifts" class="nav-item">
+    <i class="fa-solid fa-gear"></i>
+    <span>הגדרות</span>
+  </a>
+  <a class="nav-item" href="#">
+    <i id="burger" class="fa-solid fa-bars"></i>
+    <span>תפריט</span>
+  </a>
+</nav>
 
 <!-- התוכן שלך -->
 <nav class="mobile-nav" id="mobileNav">
@@ -205,7 +227,7 @@ h1.app-title {
   </ul>
   <button id="closeNav" class="close-btn">✖</button> 
 </nav>
-<div class="container" style="margin-top: 75px;">
+<div class="container">
   <h1 class="app-title" id="user">ברוכים הבאים</h1>
   <p class="subtitle">בחרו פעולה כדי להתחיל 👇</p>
  <div class="nav-grid">
